feat: add activation endpoint
