# src/controllers/auth.controller.ts
@@ -25,18 +25,37 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().email().required(),
-  password: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-latter",
+      "Contains at least one uppercase later",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("at-least-one-number", "Contains at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "Password not match"), // validate password
 });
 
 export default {
-  
-  // register
+  // register endpoint
   async register(req: Request, res: Response) {
     /**
     #swagger.tags = ["Auth"]
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/RegisterRequest"}
+    }
      */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
@@ -70,7 +89,7 @@ export default {
     }
   },
 
-  // login
+  // login endpoint
   async login(req: Request, res: Response) {
     /**
     #swagger.tags = ["Auth"]
@@ -93,6 +112,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -132,6 +152,7 @@ export default {
     }
   },
 
+  // user endpoint
   async me(req: IReqUser, res: Response) {
     /**
     #swagger.tags = ["Auth"]
@@ -146,6 +167,42 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  // activation endpoint
+  async activation(req: Request, res: Response) {
+    /**
+    #swagger.tags = ["Auth"]
+    #swagger.requestBody = {
+      required: true,
+      schema: {$ref: "#/components/schemas/ActivationRequest"}
+    }
+     */
+    try {
+      const { code } = req.body as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "user successfully activated",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
